added better keyboard events

--- a/UniversalKeyboardRGBController/UniversalKeyboardRGBController.vcxproj
+++ b/UniversalKeyboardRGBController/UniversalKeyboardRGBController.vcxproj
@@ -88,7 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpp20</LanguageStandard>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -148,8 +148,7 @@
     <ClCompile Include="EventQueue.cpp" />
     <ClCompile Include="EventTriggerController.cpp" />
     <ClCompile Include="KeyboardEventSource.cpp" />
-    <ClCompile Include="KeyPressEvent.cpp" />
-    <ClCompile Include="KeyReleaseEvent.cpp" />
+    <ClCompile Include="KeyEvent.cpp" />
     <ClCompile Include="KeyTrigger.cpp" />
     <ClCompile Include="UniversalKeyboardRGBController.cpp" />
     <ClCompile Include="VisorEffect.cpp" />
@@ -168,11 +167,10 @@
     <ClInclude Include="IEventSource.h" />
     <ClInclude Include="IKeyboardDevice.h" />
     <ClInclude Include="IKeyLight.h" />
-    <ClInclude Include="KeyReleaseEvent.h" />
+    <ClInclude Include="KeyEvent.h" />
     <ClInclude Include="KeyTrigger.h" />
     <ClInclude Include="Trigger.h" />
     <ClInclude Include="KeyboardEventSource.h" />
-    <ClInclude Include="KeyPressEvent.h" />
     <ClInclude Include="RGBColor.h" />
     <ClInclude Include="VisorEffect.h" />
     <ClInclude Include="VisorEffectAction.h" />
