--- a/UniversalKeyboardRGBController/UniversalKeyboardRGBController.vcxproj.filters
+++ b/UniversalKeyboardRGBController/UniversalKeyboardRGBController.vcxproj.filters
@@ -51,6 +51,12 @@
     <ClCompile Include="KeyEvent.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FlashEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ActionTrigger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="IKeyboardDevice.h">
@@ -98,9 +104,6 @@
     <ClInclude Include="Trigger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="IEffectAction.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="KeyTrigger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -108,6 +111,15 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="KeyEvent.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FlashEffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IEffectFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ActionTrigger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
