--- a/UniversalKeyboardRGBController/UniversalKeyboardRGBController.vcxproj
+++ b/UniversalKeyboardRGBController/UniversalKeyboardRGBController.vcxproj
@@ -148,12 +148,25 @@
     <ClCompile Include="ASUSAuraKeyboardDevice.cpp" />
     <ClCompile Include="ASUSAuraKeyLight.cpp" />
     <ClCompile Include="EffectManager.cpp" />
+    <ClCompile Include="EventManager.cpp" />
     <ClCompile Include="EventQueue.cpp" />
     <ClCompile Include="EventTriggerController.cpp" />
+    <ClCompile Include="FillEffect.cpp" />
+    <ClCompile Include="FillEffectFactory.cpp" />
     <ClCompile Include="FlashEffect.cpp" />
     <ClCompile Include="KeyboardEventSource.cpp" />
     <ClCompile Include="KeyEvent.cpp" />
     <ClCompile Include="KeyTrigger.cpp" />
+    <ClCompile Include="LuaEffect.cpp" />
+    <ClCompile Include="LuaEffectFactory.cpp" />
+    <ClCompile Include="LuaEffectSettings.cpp" />
+    <ClCompile Include="LuaIKeyboardDeviceAdapter.cpp" />
+    <ClCompile Include="LuaIntegerValue.cpp" />
+    <ClCompile Include="LuaNumberValue.cpp" />
+    <ClCompile Include="LuaStringValue.cpp" />
+    <ClCompile Include="LuaTableValue.cpp" />
+    <ClCompile Include="TriggerObserver.cpp" />
+    <ClCompile Include="TriggerObserverDispatcher.cpp" />
     <ClCompile Include="UniversalKeyboardRGBController.cpp" />
     <ClCompile Include="VisorEffect.cpp" />
     <ClCompile Include="VisorEffectAction.cpp" />
@@ -163,23 +176,42 @@
     <ClInclude Include="ASUSAuraDeviceFactory.h" />
     <ClInclude Include="ASUSAuraKeyboardDevice.h" />
     <ClInclude Include="ASUSAuraKeyLight.h" />
+    <ClInclude Include="ColorUtils.h" />
     <ClInclude Include="Effect.h" />
     <ClInclude Include="EffectManager.h" />
+    <ClInclude Include="EventManager.h" />
     <ClInclude Include="EventQueue.h" />
     <ClInclude Include="EventTriggerController.h" />
     <ClInclude Include="Event.h" />
+    <ClInclude Include="FillEffect.h" />
+    <ClInclude Include="FillEffectFactory.h" />
     <ClInclude Include="FlashEffect.h" />
     <ClInclude Include="IEffectFactory.h" />
     <ClInclude Include="IEventSource.h" />
     <ClInclude Include="IKeyboardDevice.h" />
     <ClInclude Include="IKeyLight.h" />
+    <ClInclude Include="ILuaValue.h" />
+    <ClInclude Include="LuaEffect.h" />
+    <ClInclude Include="LuaEffectFactory.h" />
+    <ClInclude Include="LuaEffectSettings.h" />
+    <ClInclude Include="LuaIKeyboardDeviceAdapter.h" />
+    <ClInclude Include="LuaIntegerValue.h" />
+    <ClInclude Include="LuaNumberValue.h" />
+    <ClInclude Include="LuaStringValue.h" />
+    <ClInclude Include="LuaTableValue.h" />
+    <ClInclude Include="LuaUtils.h" />
+    <ClInclude Include="TriggerObserver.h" />
     <ClInclude Include="KeyEvent.h" />
     <ClInclude Include="KeyTrigger.h" />
     <ClInclude Include="Trigger.h" />
     <ClInclude Include="KeyboardEventSource.h" />
     <ClInclude Include="RGBColor.h" />
+    <ClInclude Include="TriggerObserverDispatcher.h" />
     <ClInclude Include="VisorEffect.h" />
     <ClInclude Include="VisorEffectAction.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="effect.lua" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
