--- a/UniversalKeyboardRGBController/UniversalKeyboardRGBController.vcxproj.filters
+++ b/UniversalKeyboardRGBController/UniversalKeyboardRGBController.vcxproj.filters
@@ -13,18 +13,15 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Device Component">
+      <UniqueIdentifier>{35615e1f-4dec-40d9-89ae-90941d022d4b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="LuaEffect">
+      <UniqueIdentifier>{f4189ad1-a4e8-4902-85c5-f3eeee7d40a1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="UniversalKeyboardRGBController.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ASUSAuraKeyboardDevice.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ASUSAuraDeviceFactory.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="ASUSAuraKeyLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="VisorEffect.cpp">
@@ -57,24 +54,57 @@
     <ClCompile Include="ActionTrigger.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EventManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TriggerObserverDispatcher.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FillEffect.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FillEffectFactory.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="TriggerObserver.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ASUSAuraDeviceFactory.cpp">
+      <Filter>Device Component</Filter>
+    </ClCompile>
+    <ClCompile Include="ASUSAuraKeyboardDevice.cpp">
+      <Filter>Device Component</Filter>
+    </ClCompile>
+    <ClCompile Include="ASUSAuraKeyLight.cpp">
+      <Filter>Device Component</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaEffect.cpp">
+      <Filter>LuaEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaEffectSettings.cpp">
+      <Filter>LuaEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaNumberValue.cpp">
+      <Filter>LuaEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaStringValue.cpp">
+      <Filter>LuaEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaTableValue.cpp">
+      <Filter>LuaEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaEffectFactory.cpp">
+      <Filter>LuaEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaIKeyboardDeviceAdapter.cpp">
+      <Filter>LuaEffect</Filter>
+    </ClCompile>
+    <ClCompile Include="LuaIntegerValue.cpp">
+      <Filter>LuaEffect</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="IKeyboardDevice.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ASUSAuraKeyboardDevice.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ASUSAuraDeviceFactory.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="IKeyLight.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="RGBColor.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ASUSAuraKeyLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Effect.h">
@@ -122,5 +152,71 @@
     <ClInclude Include="ActionTrigger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="EventManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerObserverDispatcher.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TriggerObserver.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FillEffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FillEffectFactory.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ColorUtils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ASUSAuraKeyLight.h">
+      <Filter>Device Component</Filter>
+    </ClInclude>
+    <ClInclude Include="ASUSAuraDeviceFactory.h">
+      <Filter>Device Component</Filter>
+    </ClInclude>
+    <ClInclude Include="ASUSAuraKeyboardDevice.h">
+      <Filter>Device Component</Filter>
+    </ClInclude>
+    <ClInclude Include="IKeyboardDevice.h">
+      <Filter>Device Component</Filter>
+    </ClInclude>
+    <ClInclude Include="IKeyLight.h">
+      <Filter>Device Component</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaEffect.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaEffectSettings.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="ILuaValue.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaNumberValue.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaStringValue.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaTableValue.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaEffectFactory.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaUtils.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaIKeyboardDeviceAdapter.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaIntegerValue.h">
+      <Filter>LuaEffect</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="effect.lua" />
   </ItemGroup>
 </Project>
