--- a/src/effect_manager/CMakeLists.txt
+++ b/src/effect_manager/CMakeLists.txt
@@ -2,11 +2,11 @@ set(HEADER_LIST
 	"${UniversalRGBDeviceController_SOURCE_DIR}/include/effect_manager/Effect.hpp"
 	"${UniversalRGBDeviceController_SOURCE_DIR}/include/effect_manager/EffectManager.hpp"
 	"${UniversalRGBDeviceController_SOURCE_DIR}/include/effect_manager/IKeyboardDevice.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/effect_manager/IKeyLight.hpp"
+	"${UniversalRGBDeviceController_SOURCE_DIR}/include/effect_manager/KeyLight.hpp"
 	"${UniversalRGBDeviceController_SOURCE_DIR}/include/effect_manager/RGBColor.hpp"
 )
 
-add_library(effect_manager STATIC "EffectManager.cpp" ${HEADER_LIST})
+add_library(effect_manager STATIC "EffectManager.cpp" "KeyLight.cpp" ${HEADER_LIST})
 
 target_include_directories(effect_manager PUBLIC "${UniversalRGBDeviceController_SOURCE_DIR}/include")
 
