Created dll api for device adapters

--- a/src/asus_aura_adapter/CMakeLists.txt
+++ b/src/asus_aura_adapter/CMakeLists.txt
@@ -2,7 +2,7 @@ set(HEADER_LIST
 	"${UniversalRGBDeviceController_SOURCE_DIR}/include/asus_aura_adapter/ASUSAuraDeviceFactory.hpp"
 )
 
-add_library(asus_aura_adapter STATIC 
+add_library(asus_aura_adapter SHARED 
 	"ASUSAuraDeviceFactory.cpp"
 	"ASUSAuraKeyboardDevice.cpp"
 	"ASUSAuraKeyboardDevice.hpp"
@@ -11,10 +11,9 @@ add_library(asus_aura_adapter STATIC
 
 target_include_directories(asus_aura_adapter PUBLIC "${UniversalRGBDeviceController_SOURCE_DIR}/include")
 
-# This should be an INTERFACE dependency since it doesnt need to link effect_manager, 
-# it only needs headers. However i dont know if that is correct, so this will work
-# for now
 target_link_libraries(asus_aura_adapter PUBLIC effect_manager)
+
+target_link_libraries(asus_aura_adapter INTERFACE device_adapter_loader)
 
 target_compile_features(asus_aura_adapter PUBLIC cxx_std_20)
 
@@ -22,4 +21,11 @@ source_group(
 	TREE "${PROJECT_SOURCE_DIR}/include"
 	PREFIX "Header Files"
 	FILES ${HEADER_LIST}
+)
+
+add_custom_command(
+	TARGET asus_aura_adapter POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E copy 
+		$<TARGET_FILE:asus_aura_adapter> 
+		"${UniversalRGBDeviceController_SOURCE_DIR}/bin/asus_aura_adapter.dll"
 )
