--- a/src/lua_effect_loader/CMakeLists.txt
+++ b/src/lua_effect_loader/CMakeLists.txt
@@ -29,17 +29,15 @@ add_library(lua_effect_loader STATIC
 
 target_include_directories(lua_effect_loader PUBLIC "${UniversalRGBDeviceController_SOURCE_DIR}/include")
 
-# This should be an INTERFACE dependency since it doesnt need to link effect_manager, 
-# it only needs headers. However i dont know if that is correct, so this will work
-# for now
+target_link_libraries(lua_effect_loader PUBLIC device_adapter_loader)
 target_link_libraries(lua_effect_loader PUBLIC effect_manager)
 target_link_libraries(lua_effect_loader PUBLIC event_trigger_runner)
 
 find_package(Lua REQUIRED)
 target_include_directories(lua_effect_loader PUBLIC ${LUA_INCLUDE_DIR})
-target_link_libraries(lua_effect_loader PRIVATE ${LUA_LIBRARIES})
+target_link_libraries(lua_effect_loader PRIVATE "${LUA_LIBRARIES}")
 
-target_compile_features(asus_aura_adapter PUBLIC cxx_std_20)
+target_compile_features(lua_effect_loader PUBLIC cxx_std_20)
 
 source_group(
 	TREE "${PROJECT_SOURCE_DIR}/include"
