--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,12 @@ endif()
 # Including header files here helps IDEs but is not required.
 # Output libname matches target name, with the usual extensions on your system
 
+add_subdirectory("src/device_adapter_loader")
 add_subdirectory("src/effect_manager")
-add_subdirectory("src/asus_aura_adapter")
 add_subdirectory("src/native_effects")
 add_subdirectory("src/event_trigger_runner")
 add_subdirectory("src/lua_effect_loader")
 add_subdirectory("src/windows_event_sources")
 add_subdirectory("src/URGBDC")
+
+add_subdirectory("src/asus_aura_adapter")
