--- a/src/event_trigger_runner/CMakeLists.txt
+++ b/src/event_trigger_runner/CMakeLists.txt
@@ -1,14 +1,14 @@
 set(HEADER_LIST 
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/Event.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/EventManager.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/EventQueue.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/EventTriggerController.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/IEffectFactory.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/IEventSource.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/KeyEvent.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/Trigger.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/TriggerObserver.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/event_trigger_runner/TriggerObserverDispatcher.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/Event.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/EventManager.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/EventQueue.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/EventTriggerController.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/IEffectFactory.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/IEventSource.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/KeyEvent.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/Trigger.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/TriggerObserver.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/TriggerObserverDispatcher.hpp"
 )
 
 add_library(event_trigger_runner STATIC 
@@ -23,7 +23,7 @@ add_library(event_trigger_runner STATIC
 
 
 
-target_include_directories(event_trigger_runner PUBLIC "${UniversalRGBDeviceController_SOURCE_DIR}/include")
+target_include_directories(event_trigger_runner PUBLIC "${RGBStudio_SOURCE_DIR}/include")
 
 target_link_libraries(event_trigger_runner PUBLIC device_adapter_loader)
 target_link_libraries(event_trigger_runner PUBLIC effect_manager)
