--- a/src/effect_manager/CMakeLists.txt
+++ b/src/effect_manager/CMakeLists.txt
@@ -1,11 +1,11 @@
 set(HEADER_LIST 
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/effect_manager/Effect.hpp"
-	"${UniversalRGBDeviceController_SOURCE_DIR}/include/effect_manager/EffectManager.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/effect_manager/Effect.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/effect_manager/EffectManager.hpp"
 )
 
 add_library(effect_manager STATIC "EffectManager.cpp" ${HEADER_LIST})
 
-target_include_directories(effect_manager PUBLIC "${UniversalRGBDeviceController_SOURCE_DIR}/include")
+target_include_directories(effect_manager PUBLIC "${RGBStudio_SOURCE_DIR}/include")
 
 target_link_libraries(effect_manager PUBLIC device_adapter_loader)
 
