--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,17 @@ endif()
 # Including header files here helps IDEs but is not required.
 # Output libname matches target name, with the usual extensions on your system
 
+# Static libraries
 add_subdirectory("src/device_adapter_loader")
 add_subdirectory("src/effect_manager")
 add_subdirectory("src/native_effects")
 add_subdirectory("src/event_trigger_runner")
 add_subdirectory("src/lua_effect_loader")
 add_subdirectory("src/windows_event_sources")
-add_subdirectory("src/effect_system_demo")
 
+# Dynamic libraries
 add_subdirectory("src/asus_aura_adapter")
+
+# Executables
+add_subdirectory("src/effect_system_demo")
+add_subdirectory("src/RGBStudio")
