--- a/src/RGBStudio/frontend/package.json
+++ b/src/RGBStudio/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "@rollup/plugin-typescript": "^8.3.0",
+    "less": "^4.1.2",
     "rollup": "^2.63.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
