--- a/src/RGBStudio/frontend/makefile
+++ b/src/RGBStudio/frontend/makefile
@@ -7,6 +7,10 @@ all: ../build/css/editor.css ../build/script/editor.m.js ../build/script/editor.
 ts/GraphEditor/GraphEditor.ts \
 ts/GraphEditor/GraphNode.ts \
 ts/GraphEditor/GraphNodeAttribute.ts \
+ts/GraphEditor/NumberAttribute.ts \
+ts/GraphEditor/ColorAttribute.ts \
+ts/GraphEditor/SourceAttribute.ts \
+ts/GraphEditor/TargetAttribute.ts \
 ts/SVGCompositor/behavior/AutoSizer.ts \
 ts/SVGCompositor/behavior/Dragifier.ts \
 ts/SVGCompositor/CSEvent.ts \
@@ -23,11 +27,13 @@ ts/SVGCompositor/WidgetAtom.ts \
 ts/SVGCompositor/WidgetConstructor.ts \
 ts/SVGCompositor/WidgetContainer.ts \
 ts/SVGCompositor/widgets/Circle.ts \
+ts/SVGCompositor/widgets/ColorInputWidget.ts \
 ts/SVGCompositor/widgets/FitContentContainer.ts \
 ts/SVGCompositor/widgets/FlexBox.ts \
 ts/SVGCompositor/widgets/LineEnd.ts \
 ts/SVGCompositor/widgets/PaddedContainer.ts \
 ts/SVGCompositor/widgets/StackPanel.ts \
+ts/SVGCompositor/widgets/TextInputWidget.ts \
 ts/SVGCompositor/widgets/TextWidget.ts \
 ts/util.ts \
 tsconfig.json \
