--- a/src/event_trigger_runner/CMakeLists.txt
+++ b/src/event_trigger_runner/CMakeLists.txt
@@ -9,6 +9,8 @@ set(HEADER_LIST
 	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/Trigger.hpp"
 	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/TriggerObserver.hpp"
 	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/TriggerObserverDispatcher.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/default_triggers/KeyTrigger.hpp"
+	"${RGBStudio_SOURCE_DIR}/include/event_trigger_runner/default_triggers/KeyTriggerFactory.hpp"
 )
 
 add_library(event_trigger_runner STATIC 
@@ -18,6 +20,8 @@ add_library(event_trigger_runner STATIC
 	"KeyEvent.cpp"
 	"TriggerObserver.cpp"
 	"TriggerObserverDispatcher.cpp" 
+	"default_triggers/KeyTrigger.cpp" 
+	"default_triggers/KeyTriggerFactory.cpp" 
 	${HEADER_LIST}
 )
 
@@ -27,6 +31,7 @@ target_include_directories(event_trigger_runner PUBLIC "${RGBStudio_SOURCE_DIR}/
 
 target_link_libraries(event_trigger_runner PUBLIC device_adapter_loader)
 target_link_libraries(event_trigger_runner PUBLIC effect_manager)
+target_link_libraries(event_trigger_runner PUBLIC dynamic_config)
 
 target_compile_features(event_trigger_runner PUBLIC cxx_std_20)
 
